# stdlib132

./: .gitignore  pyproject.toml
src/stdlib132/: __init__.py
src/stdlib132/latex/: __init__.py  latex.py
src/stdlib132/probgen/: probgen.py  standalone.txt  template.txt
src/stdlib132/random/: __init__.py  random.py
src/stdlib132/utils/: utils.py
stdlib132/latex/: __init__.py  latex.py
stdlib132/probgen/: __init__.py  apply_row_ops.txt  change_of_basis.txt  col_null.txt  compute_lin_comb_vec.txt  compute_lin_trans.txt  compute_mat_vec_mul.txt  coord_vec.txt  det_inv.txt  determine_coefficient_augmented_matrix.txt  determine_lin_dep.txt  determine_linear_system.txt  determine_rref.txt  determine_transform_inv.txt  determine_unique_solution_linear_system.txt  diagonalization.txt  dom_cod_mat.txt  draw_unit_square.txt  eigen.txt  eigenvals.txt  equiv_vector_eq.txt  gen_form_sol_mat_eq.txt  in_range.txt  in_span_of_three.txt  in_span_of_two.txt  lin_sys_of_span.txt  lu_fact.txt  matrix_from_lin_trans.txt  pair_len_angle_dist.txt  particular_sol.txt  probgen.py  row_ops_pair_transform.txt  span_pair_vec.txt  state_diag.txt  steady_state.txt  use_inverse.txt  vec_in_span.txt  verify_solution_linear_system.txt
stdlib132/probgen/problems/: alt_gen_form.txt  apply_row_ops.txt  col_null_given_rref.txt  compute_mat_mul.txt  det.txt  determine_inv.txt  (+15 more)
stdlib132/random/: __init__.py  random.py
stdlib132/utils/: __init__.py  utils.py
tests/: test_latex.py
tests/test_latex/: test_lin_comb_basic_row.txt  test_lin_comb_neg_one_first.txt
workbook/: build.py
(+12 files in other folders)
